--- a/index.html
+++ b/index.html
@@ -1,2 +1,12 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+  </head>
+<body>
 <p>Soloop Download please scan the QR code below</p>
+
+<img src="Q6.png" alt="Q6_code" width="460" height="460">
+
+</body>
+</html>
+
